--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,435 @@
-@import "utils";
-@import "fonts";
-@import "typography";
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
+@import "utils/_normalize.scss";
+
+
+:root {
+  --primary-blue: #007af3;
+}
 
 body {
-  background: $c-gray;
+  background-color: #f2f2f2;
+  font-family: 'Poppins', sans-serif;
+}
+
+a {
+  color: #444444;
+}
+
+section {
+  padding: 5em 2em;
+}
+
+.header {
+  background: white;
+  padding: 1em 2em;
+  display: flex;
+  justify-content: space-between;
+
+  &__logo {
+    font-weight: 700;
+    font-size: 1.2rem;
+    color: black;
+
+    &--colored {
+      color: var(--primary-blue);
+    }
+  }
+}
+
+.nav {
+  position: fixed;
+  z-index: 999;
+  width: 50%;
+  right: 0;
+  top: 0;
+  background: #20272e;
+  height: 94vh;
+  padding: 0;
+  border: 3px solid var(--primary-blue);
+
+  .primary--nav {
+    margin-top: 5em;
+  }
+
+  &__link {
+    color: white;
+    display: block;
+    margin: 0 .5em .5em 0;
+    font-size: 1.3rem;
+    text-align: right;
+
+    &:hover {
+      font-weight: bold;
+      cursor: pointer;
+    }
+  }
+
+  .mobile-menu-exit {
+    float: right;
+    margin: 1em;
+
+    &:hover {
+      cursor: pointer;
+    }
+  }
+}
+
+.nav {
+  display: none;
+}
+
+nav.mobile-menu {
+  display: block;
+}
+
+.hero {
+  text-align: center;
+
+  &__subhead {
+    text-transform: uppercase;
+    font-weight: bold;
+    color: rgb(55, 55, 55);
+    letter-spacing: .2em;
+  }
+
+  &__headline {
+    font-size: 2.5rem;
+    line-height: 1.3em;
+  }
+
+  &__cta {
+    margin-top: 2em;
+
+    .primary-cta {
+      background: var(--primary-blue);
+      color: white;
+      padding: .6em 1.3em;
+      font-size: 1.4rem;
+      border-radius: 5em;
+      font-weight: bold;
+      display: inline-block;
+    }
+
+    .watch-video-cta {
+      display: flex;
+      margin-top: 1em;
+      justify-content: center;
+      align-items: center;
+
+      .video-icon {
+        margin-right: .5em;
+      }
+    }
+  }
+
+  &__image {
+    width: 70%;
+    margin: 3em auto 0;
+  }
+}
+
+
+.features {
+  background: #20272e;
+  color: white;
+
+  &__list {
+    padding-left: .1em;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(19rem, 1fr));
+    gap: 1em 2em;
+  }
+
+  &__items {
+    font-size: 1.1rem;
+    margin-left: 2em;
+    position: relative;
+
+    &:before {
+      content: "";
+      left: -2em;
+      position: absolute;
+      width: 20px;
+      height: 20px;
+      background: url(../images/bullet.svg);
+      background-size: contain;
+    }
+  }
+
+  &__image {
+    display: none;
+  }
+}
+
+.testimonials {
+  background: var(--primary-blue);
+  color: white;
+
+  &__item {
+    background: #006bd6;
+    text-align: center;
+    padding: 2em 1em;
+    width: 80%;
+    margin: 0 auto 5em auto;
+    border-radius: 1em;
+  }
+
+  &__image {
+    width: 5em;
+    height: 5em;
+    border: 5px solid #006bd6;
+    border-radius: 50%;
+    margin: -4.5em auto 0;
+  }
+}
+
+.contact {
+
+  &__left {
+    margin-bottom: 5em;
+  }
+
+  &__headline {
+    font-size: 2rem;
+    margin-bottom: 1em;
+  }
+
+  &__label {
+    display: block;
+    font-size: 1.2rem;
+  }
+
+  &__input,
+  textarea {
+    margin-bottom: 1em;
+    width: 100%;
+    padding: .8em;
+    border: 1px solid gray;
+    border-radius: .3em;
+    box-sizing: border-box;
+  }
+
+
+  &__message-btn {
+    display: inline-block;
+    background-color: var(--primary-blue);
+    color: white;
+    font-weight: bold;
+    font-size: 1.3rem;
+    border: none;
+    border-radius: 5em;
+    padding: .8em 2em;
+    cursor: pointer;
+
+    &:hover {
+      background-color: white;
+      color: var(--primary-blue);
+      border: 2px solid var(--primary-blue);
+    }
+  }
+
+  &__right {
+    text-align: center;
+
+    iframe {
+      width: 100%;
+      height: 300px;
+      box-sizing: border-box;
+    }
+  }
+}
+
+
+
+
+@media only screen and (min-width: 820px) {
+
+  .mobile-menu-exit,
+  .mobile-menu {
+    display: none;
+  }
+
+  .header {
+    display: grid;
+    grid-template-columns: 200px auto;
+    justify-content: unset;
+  }
+
+  .nav {
+    display: flex;
+    justify-content: space-between;
+    background: none;
+    position: unset;
+    height: auto;
+    width: 100%;
+    border: none;
+
+    &__list {
+      display: flex;
+    }
+
+    &__link {
+      color: black;
+      font-size: 1em;
+      padding: .1em 1em;
+    }
+
+    .primary--nav {
+      margin: 0;
+    }
+
+    .active--link {
+      font-weight: bold;
+    }
+
+    .go-premium-cta {
+      color: var(--primary-blue);
+      border: 3px solid var(--primary-blue);
+      font-weight: bold;
+      border-radius: 100vh;
+      margin-top: -.2em;
+
+      &:hover {
+        background: var(--primary-blue);
+        color: white;
+      }
+    }
+
+  }
+}
+
+
+@media only screen and (min-width: 1080px) {
+  .container {
+    width: 1080px;
+    margin: 0 auto;
+  }
+
+  section {
+    padding: 4em 4em 6em 4em;
+  }
+
+  .hero {
+    &__container {
+      display: flex;
+      justify-content: space-between;
+      text-align: left;
+    }
+
+    &__content {
+      margin: 3em 3em 0 5em;
+    }
+
+    &__headline {
+      font-size: 3rem;
+      width: 90%;
+    }
+
+    &__cta {
+      display: flex;
+
+      .primary-cta {
+        margin-right: .8em;
+
+        &:hover {
+          background: white;
+          color: var(--primary-blue);
+          border: 3px solid var(--primary-blue);
+        }
+      }
+
+      .watch-video-cta {
+        display: block;
+      }
+    }
+
+    &__image {
+      width: 30%;
+      margin-right: 8em;
+    }
+  }
+
+
+  .features {
+    position: relative;
+
+    &__list {
+      display: block;
+      margin-left: 5em;
+    }
+
+    &__items {
+      margin-bottom: 1em;
+      font-size: 1.4rem;
+
+      &:before {
+        width: 28px;
+        height: 28px;
+      }
+
+      &:last-of-type {
+        margin-bottom: 0;
+      }
+    }
+
+    &__image {
+      display: block;
+      position: absolute;
+      right: 0;
+      width: 350px;
+      bottom: -1.5em;
+    }
+
+    &::before {
+      content: '';
+      position: absolute;
+      width: 10%;
+      height: 20em;
+      background: var(--primary-blue);
+      left: 0;
+      top: -4em;
+
+    }
+
+    &::after {
+      content: '';
+      position: absolute;
+      width: 150px;
+      height: 20em;
+      background: url(/images/dots.svg) no-repeat;
+      left: 4.5em;
+      top: 2em;
+    }
+  }
+
+  .testimonials {
+
+    &__list {
+      display: flex;
+    }
+
+    &__item {
+      margin: 1em 1em 0;
+    }
+  }
+
+  .contact {
+    position: relative;
+
+    &__container {
+      display: flex;
+    }
+
+    &__right {
+      position: absolute;
+      right: 0;
+      top: 0;
+      width: 45%;
+      height: 100%;
+
+      iframe {
+        height: 100%;
+      }
+    }
+  }
 }
